server/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: glassdragon-nodeserver
  labels:
    app: glassdragon-nodeserver
spec:
  selector:
    matchLabels:
      app: glassdragon-nodeserver
  template:
    metadata:
      labels:
        app: glassdragon-nodeserver
    spec:
      containers:
        - name: glassdragon-nodeserver
          image: davman808/v2
          livenessProbe:
            httpGet:
              path: /alive
              port: 8080
          readinessProbe:
            httpGet:
              path: /ready
              port: 8080
          resources:
            limits: 
              cpu: 200m
              memory: 300Mi
            requests: 
              cpu: 200m
              memory: 300Mi
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
