server/kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: glassdragon-nodeserver
  labels:
    app: glassdragon-nodeserver
spec:
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: glassdragon-nodeserver
