server/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: glassdragon-nodeserver
spec:
  rules:
    - host: glassdragon-nodeserver.davman808.ecom.obi.solutions
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: glassdragon-nodeserver
                port:
                  name: http
